--- a/sass/index.css
+++ b/sass/index.css
@@ -215,6 +215,10 @@ body {
   border: none;
 }
 
+.form_wrapper .form .form_element select {
+  padding-left: 10px;
+}
+
 .form_wrapper .form .form_element .button {
   background-color: #fff;
   width: 150px;
@@ -222,6 +226,10 @@ body {
   border: none;
   -webkit-box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.3);
           box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.3);
+}
+
+.form_wrapper .form .form_element input[type="radio"] {
+  margin: 0 5px 0 10px;
 }
 
 .settings_wrapper {
@@ -300,5 +308,85 @@ body {
   width: 40px;
   height: 23px;
   padding: 2px;
+}
+
+.settings_wrapper .settings .setting input[type="text"] {
+  border: none;
+  width: 100px;
+  height: 17px;
+  -webkit-box-shadow: 0 0px 2px 1px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0px 2px 1px rgba(0, 0, 0, 0.3);
+}
+
+.setting-adder {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.setting-adder .wrapper-of-adder {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-left: 20px;
+}
+
+.setting-adder .wrapper-of-adder input {
+  width: 130px !important;
+  height: 25px !important;
+  padding-left: 10px;
+}
+
+.setting-adder .wrapper-of-adder i {
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.setting-adder .wrapper-of-added-options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+}
+
+.setting-adder .wrapper-of-added-options .left-colomn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 110px;
+  margin-left: 10px;
+}
+
+.setting-adder .wrapper-of-added-options .right-colomn {
+  padding: 0 0 0 10px;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+
+.setting-adder .wrapper-of-added-options .right-colomn li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.setting-adder .wrapper-of-added-options .right-colomn li i {
+  margin: 0;
+  margin-left: 5px;
+  cursor: pointer;
+}
+
+.setting-adder .wrapper-of-added-options .right-colomn li p {
+  margin: 3px 0;
 }
 /*# sourceMappingURL=index.css.map */
